--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +17,7 @@
         android:theme="@style/Theme.Android77"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".HomeScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +25,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- Album Activity -->
+        <activity android:name=".Album" />
+        <activity android:name=".AlbumView" />
+        <activity android:name=".EditAlbum" />
+        <activity android:name=".ImageAdapter" />
+        <activity android:name=".SlideShowView" />
+
+
+        <!-- Photo Activity -->
+        <activity android:name=".Photo" />
+
+        <!-- Search Activity -->
+        <activity android:name=".Search" />
+
+        <!-- Tag Activity -->
+        <activity android:name=".Tag" />
+
+        <!-- Create Album Activity -->
+        <activity android:name=".NewAlbum" />
+
     </application>
 
 </manifest>
